<?xml version="1.0"?>
<package format="2">
  <name>rviz_simple_gui</name>
  <version>0.1.0</version>
  <description>A Simple GUI for RVIZ.</description>

  <maintainer email="joseph_polden@artc.a-star.edu.sg">Jonathan Meyer</maintainer>
  <author email="joseph_polden@artc.a-star.edu.sg">Jonathan Meyer</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rviz</depend>
 

  <export>
   <rviz plugin="${prefix}/plugin.xml"/>
  </export>

</package>
