<?xml version="1.0"?>
<package format="2">
  <name>rviz_simple_gui</name>
  <version>0.1.0</version>
  <description>A Simple GUI for RVIZ.</description>

  <maintainer email="joseph_polden@artc.a-star.edu.sg">Jonathan Meyer</maintainer>
  <author email="joseph_polden@artc.a-star.edu.sg">Jonathan Meyer</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_generation</build_depend>
  <!--build_depend>scene_construction</build_depend-->

  <build_export_depend>interactive_markers</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_perception</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rviz</build_export_depend>

  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <!--exec_depend>scene_construction</exec_depend-->

  <export>
   <rviz plugin="${prefix}/plugin.xml"/>
  </export>

</package>
